# JsonFormat

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  ROADMAP.md  run_tests.sh
examples/: CMakeLists.txt
examples/resources/: in.json
examples/src/: Simple.cpp
include/: JsonFormat.hpp
src/: JsonFormat.cpp
tests/: main.cpp
